fourth commit: oauth functionality added
