# routes/books.js
@@ -2,13 +2,14 @@ const express = require('express');
 const router = express.Router();
 const booksControllers = require('../controllers/books');
 const { postPutSharedRules, validate } = require('../validators/books-validator');
+const { isAuthenticated } = require('../validators/authenticate');
 
-router.get('/books', booksControllers.getBooks);
+router.get('/', booksControllers.getBooks);
 
-router.post('/books', postPutSharedRules, validate, booksControllers.addBook);
+router.post('/', isAuthenticated, postPutSharedRules, validate, booksControllers.addBook);
 
-router.put('/books/:id', postPutSharedRules, validate, booksControllers.updateBook)
+router.put('/:id', isAuthenticated, postPutSharedRules, validate, booksControllers.updateBook)
 
-router.delete('/books/:id', booksControllers.deleteBook)
+router.delete('/:id', isAuthenticated, booksControllers.deleteBook)
 
 module.exports = router;
